--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,12 @@
 </div>
 <!-- <app-heroes></app-heroes> -->
 <nav>
-  <a routerLink="/heroes">Heroes page</a>
+<!--   <a routerLink="/heroes">Heroes page</a> -->
   <a routerLink="/dashboard">Dashboard page</a>
+  <a routerLink="/users">Users page</a>
 </nav>
 <router-outlet></router-outlet>
-<app-messages></app-messages>
+<!-- <app-messages></app-messages> -->
 <!-- <h2>Here are some links to help you start: </h2>
 <ul>
   <li>
