--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h3>Top Heroes</h3>
+<!-- <h3>Top Heroes</h3>
 <div class="grid grid-pad">
   <a *ngFor="let hero of heroes" class="col-1-4" routerLink="/detail/{{hero.id}}">
     <div class="module hero">
@@ -6,4 +6,6 @@
     </div>
   </a>
 </div>
-<app-hero-search></app-hero-search>
+<app-hero-search></app-hero-search> -->
+
+<h3>Halaman Dashboard Works !</h3>
