modify add item dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,10 @@
 </div>
 <!-- <app-heroes></app-heroes> -->
 <nav>
-<!--   <a routerLink="/heroes">Heroes page</a> -->
   <a routerLink="/dashboard">Dashboard page</a>
+<!--   <a routerLink="/heroes">Heroes page</a> -->
   <a routerLink="/users">Users page</a>
+  <a routerLink="/items">Items page</a>
 </nav>
 <router-outlet></router-outlet>
 <!-- <app-messages></app-messages> -->
