sukses menyambungkan items dengan backend

--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,6 +1,6 @@
 <h2>E - Kita Items</h2>
 
-<table>
+<!-- <table>
 	<tr>
     <th>id</th>
     <th>level</th>
@@ -36,11 +36,11 @@ Let's update the item component
       {{o.name}}
    </option>
 </select>
-<br>
+<br> -->
 <!-- <button (click)="print()">Click me</button> untuk mengirim value-->
 <!-- <p>Button output: {{ printedOption }}</p> untuk mencetak value -->
 
-<label>Kategori : </label>
+<!-- <label>Kategori : </label>
 <div [ngSwitch]="selectedOption">
 	<div *ngSwitchCase="'easy'">
 		<select [(ngModel)]="selectedCategory">
@@ -97,9 +97,9 @@ Selected Topic : {{selectedTopic}}
   <label>Item Answer : <input #answer /></label>
   <label>Item xp : <input #xp /></label>
   <label>Item image : <input #image /></label>
-  <label>Item sound : <input #sound /></label>
+  <label>Item sound : <input #sound /></label> -->
   <!-- (click) passes input value to add() and then clears the input -->
-  <button (click)="add(title);">
+<!--   <button (click)="add(title);">
     add
   </button>
-</div>
+</div> -->
