create learning topic show component and routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <a routerLink="/items">Items page</a>
   <a routerLink="/question-difficulties">question difficulty</a>
   <a routerLink="/question-categories">question category</a>
+    <a routerLink="/learning-topics">learning topic</a>
 </nav>
 
 <div style="text-align:center">
