--- a/src/app/question-difficulty/question-difficulty.component.html
+++ b/src/app/question-difficulty/question-difficulty.component.html
@@ -4,15 +4,16 @@
 	<tr>
     <th>id</th>
     <th>difficulty</th>
-    <th>created at</th>
-    <th>updated at</th>
+    <th>delete</th>
 	</tr>
   <tr *ngFor="let level of levels">
   	<a routerLink="/leveldetail/{{level.id}}">
     <td>{{level.id}}</td>
     </a>
     <td>{{level.question_difficulty_name}}</td>
-    <td>{{level.createdAt}}</td>
-    <td>{{level.updatedAt}}</td>
+    <td>
+      <button class="btn btn-danger" (click)="deleteQuestionDifficulty(level)"> Delete</button>
+    </td>
   </tr>
 </table>
+<!-- <app-question-difficulty-create></app-question-difficulty-create> -->
