menambahkan create dan delete item

--- a/src/app/question-difficulty/question-difficulty.component.html
+++ b/src/app/question-difficulty/question-difficulty.component.html
@@ -16,4 +16,5 @@
     </td>
   </tr>
 </table>
+<a href="question-difficulties/create"><button class="btn btn-success">create level</button></a>
 <!-- <app-question-difficulty-create></app-question-difficulty-create> -->
