--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -15,6 +15,7 @@
     <th>x_coordinate</th>
     <th>y_coordinate</th>
     <th>item Category</th>
+    <th>delete</th>
 	</tr>
   <tr *ngFor="let item of items">
   	<a routerLink="/itemdetail/{{item.id}}">
@@ -28,9 +29,12 @@
     <td>{{item.x_coordinate}}</td>
     <td>{{item.y_coordinate}}</td>
     <td>{{item.itemCategory?.id}}</td>
+    <td>
+      <button class="btn btn-danger" (click)="deleteItem(item)"> Delete</button>
+    </td>
   </tr>
 </table>
-
+<a href="items/create"><button class="btn btn-success">create level</button></a>
 <p>
 Let's update the item component
 </p>
