--- a/src/app/question-difficulty-create/question-difficulty-create.component.html
+++ b/src/app/question-difficulty-create/question-difficulty-create.component.html
@@ -1,19 +1,20 @@
 <h2>add Question Difficulty</h2>
-<!-- <div class="col-md-6">
-  <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+<div class="col-md-6">
+  <form [formGroup]="addForm">
     <div class="form-group">
       <label for="question_difficulty_name">Difficulty :</label>
-      <input type="question_difficulty_name" formControlName="question_difficulty_name" placeholder="Email" name="question_difficulty_name" class="form-control" id="question_difficulty_name">
+      <input type="question_difficulty_name" formControlName="question_difficulty_name" placeholder="Level name" name="question_difficulty_name" class="form-control" id="question_difficulty_name">
     </div>
 
-    <button class="btn btn-success">Update</button>
+    <button (click)="onSubmit()" class="btn btn-success">Update</button>
   </form>
-</div> -->
-<div>
+</div>
+<!-- method bawaan angular -->
+<!-- <div>
   <label>Level name:
     <input #levelName />
   </label>
-  <button (click)="add(levelName.value); levelName.value=''">
+  <button (click)="createQuestionDifficulty(levelName.value); levelName.value=''">
     add
   </button>
-</div>
+</div> -->
