creating update template

--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -1,13 +1,1 @@
-<div *ngIf="user">
-
-  <h2>{{item.title | uppercase}} Details</h2>
-  <div><span>id: </span>{{item.id}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="item.title" placeholder="name"/>
-    </label>
-  </div>
-  <button (click)="save()">save</button>
-  <button (click)="goBack()">go back</button>
-
-</div>
+<p>item detail component works</p>
