adding crud learning-item and navigator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
   <a routerLink="/learning-topics">learning topic</a>
   <a routerLink="/question-categories">question category</a>
   <a routerLink="/learning-item">question category</a>
+  <a routerLink="/learning-items">Learning Items</a>
   <a routerLink="/challenges">Challenges</a>
 </nav>
 
