--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   <a routerLink="/question-difficulties">question difficulty</a>
   <a routerLink="/learning-topics">learning topic</a>
   <a routerLink="/question-categories">question category</a>
-  <a routerLink="/learning-item">question category</a>
+  <a routerLink="/question-categories">question category</a>
   <a routerLink="/learning-items">Learning Items</a>
   <a routerLink="/challenges">Challenges</a>
 </nav>
