--- a/src/app/question-difficulty-detail/question-difficulty-detail.component.html
+++ b/src/app/question-difficulty-detail/question-difficulty-detail.component.html
@@ -1,10 +1,13 @@
-<p>
-  question-difficulty-detail works!
-</p>
+<div *ngIf="questionDifficulty">
+  <h2>{{questionDifficulty.question_difficulty_name | uppercase}} Details</h2>
+  <div><span>id: </span>{{questionDifficulty.id}}</div>
+  
   <div>
-    <label>name:    </label>
-
-      <input [(ngModel)]= "questionDifficulty.question_difficulty_name" placeholder="level"/>
+    <label>question_difficulty_name :
+      <input [(ngModel)]="questionDifficulty.question_difficulty_name"/>
+    </label>
   </div>
+
   <button (click)="goBack()">go back</button>
   <button (click)="save()">save</button>
+</div>
