adding crud in items entity, but find some error

--- a/src/app/item/item-create/item-create.component.html
+++ b/src/app/item/item-create/item-create.component.html
@@ -3,31 +3,31 @@
   <form [formGroup]="addForm">
     <div class="form-group">
 <label for="item_category_id">item_category_id :</label>
-      <input type="text" formControlName="item_category_id" placeholder="Level name" name="item_category_id" class="form-control" id="item_category_id">
+      <input type="item_category_id" formControlName="item_category_id" name="item_category_id" class="form-control" id="item_category_id">
 <br>
 <label for="name">name :</label>
-      <input type="text" formControlName="name" placeholder="Level name" name="name" class="form-control" id="name">
+      <input type="name" formControlName="name" placeholder="Level name" name="name" class="form-control" id="name">
 <br>
 <label for="item_desc">item_desc :</label>
-      <input type="text" formControlName="item_desc" placeholder="Level name" name="item_desc" class="form-control" id="item_desc">
+      <input type="item_desc" formControlName="item_desc" placeholder="Level name" name="item_desc" class="form-control" id="item_desc">
 <br>
 <label for="star">star :</label>
-      <input type="text" formControlName="star" placeholder="Level name" name="star" class="form-control" id="star">
+      <input type="star" formControlName="star" placeholder="Level name" name="star" class="form-control" id="star">
 <br>
 <label for="image">image :</label>
-      <input type="text" formControlName="image" placeholder="Level name" name="image" class="form-control" id="image">
+      <input type="image" formControlName="image" placeholder="Level name" name="image" class="form-control" id="image">
 <br>
 <label for="x_coordinate">x_coordinate :</label>
-      <input type="text" formControlName="x_coordinate" placeholder="Level name" name="x_coordinate" class="form-control" id="x_coordinate">
+      <input type="x_coordinate" formControlName="x_coordinate" placeholder="Level name" name="x_coordinate" class="form-control" id="x_coordinate">
 <br>
 <label for="y_coordinate">y_coordinate :</label>
-      <input type="text" formControlName="y_coordinate" placeholder="Level name" name="y_coordinate" class="form-control" id="y_coordinate">
+      <input type="y_coordinate" formControlName="y_coordinate" placeholder="Level name" name="y_coordinate" class="form-control" id="y_coordinate">
 <br>
 <label for="itemCategory">itemCategory :</label>
-      <input type="text" formControlName="itemCategory" placeholder="Level name" name="itemCategory" class="form-control" id="itemCategory">
+      <input type="itemCategory" formControlName="itemCategory" placeholder="Level name" name="itemCategory" class="form-control" id="itemCategory">
 <br>
     </div>
 
-    <button (click)="onSubmit()" class="btn btn-success">Update</button>
+    <button (click)="onSubmit()" class="btn btn-success">create</button>
   </form>
 </div>
