--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,4 +1,4 @@
-<h2>E - Kita Items uhuy</h2>
+<h2>E - Kita Items</h2>
 <!-- <h2>items</h2>
     <ul *ngFor="let i of items">
     <li>{{i.name}}</li>
@@ -34,8 +34,8 @@
     </td>
   </tr>
 </table>
-<a href="items/create"><button class="btn btn-success">create level</button></a>
-<p>
+<a href="items-create"><button class="btn btn-success">create item</button></a>
+<!-- <p>
 Let's update the item component
 </p>
 <label>Select Level : </label>
@@ -44,7 +44,7 @@ Let's update the item component
       {{o.name}}
    </option>
 </select>
-<br>
+<br> -->
 <!-- <button (click)="print()">Click me</button> untuk mengirim value-->
 <!-- <p>Button output: {{ printedOption }}</p> untuk mencetak value -->
 
