--- a/src/app/learning-item/learning-item-create/learning-item-create.component.html
+++ b/src/app/learning-item/learning-item-create/learning-item-create.component.html
@@ -31,6 +31,6 @@
       <input type="learning_item_answer" formControlName="learning_item_answer" name="learning_item_answer" class="form-control" id="learning_item_answer">
     </div>
 
-    <button (click)="onSubmit()" class="btn btn-success">Update</button>
+    <button (click)="onSubmit()" class="btn btn-success">create</button>
   </form>
 </div>
