--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
-<!-- <h3>Top Heroes</h3>
-<div class="grid grid-pad">
-  <a *ngFor="let hero of heroes" class="col-1-4" routerLink="/detail/{{hero.id}}">
-    <div class="module hero">
-      <h4>{{hero.name}}</h4>
-    </div>
-  </a>
-</div>
-<app-hero-search></app-hero-search> -->
-
-<h3>Halaman Dashboard Works !</h3>
+<nav>
+  <a routerLink="/dashboard">Dashboard page</a>
+  <a routerLink="/users">Users page</a>
+  <a routerLink="/items">Items page</a>
+  <a routerLink="/question-difficulties">question difficulty</a>
+  <a routerLink="/learning-topics">learning topic</a>
+  <a routerLink="/question-categories">question category</a>
+  <a routerLink="/question-categories">question category</a>
+  <a routerLink="/learning-items">Learning Items</a>
+  <a routerLink="/challenges">Challenges</a>
+</nav>
