--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -1,1 +1,46 @@
-<p>item detail component works</p>
+<div *ngIf="item">
+  <h2>{{item.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{item.id}}</div>
+  <div>
+    <label>item_category_id:
+      <input [(ngModel)]="item.item_category_id"/>
+    </label>
+  </div>
+  <div>
+    <label>name :
+      <input [(ngModel)]="item.name"/>
+    </label>
+  </div>
+    <div>
+    <label>item_desc:
+      <input [(ngModel)]="item.item_desc"/>
+    </label>
+  </div>
+    <div>
+    <label>star:
+      <input [(ngModel)]="item.star" />
+    </label>
+  </div>
+    <div>
+    <label>image:
+      <input [(ngModel)]="item.image" />
+    </label>
+  </div>
+    <div>
+    <label>x_coordinate:
+      <input [(ngModel)]="item.x_coordinate" />
+    </label>
+  </div>
+    <div>
+    <label>y_coordinate:
+      <input [(ngModel)]="item.y_coordinate" />
+    </label>
+  </div>
+    <div>
+    <label>itemCategory:
+      <input [(ngModel)]="item.itemCategory" />
+    </label>
+  </div>
+  <button (click)="goBack()">go back</button>
+  <button (click)="save()">save</button>
+</div>
