adding login page and verification

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,1 @@
-<nav>
-  <a routerLink="/dashboard">Dashboard page</a>
-  <a routerLink="/users">Users page</a>
-  <a routerLink="/items">Items page</a>
-  <a routerLink="/question-difficulties">question difficulty</a>
-  <a routerLink="/learning-topics">learning topic</a>
-  <a routerLink="/question-categories">question category</a>
-  <a routerLink="/question-categories">question category</a>
-  <a routerLink="/learning-items">Learning Items</a>
-  <a routerLink="/challenges">Challenges</a>
-</nav>
+dashboard !
