--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,14 @@
-<p>
-  login works!
-</p>
+<form class="example-form">
+       <table class="example-full-width" cellspacing="0">
+         <tr>
+           <td>
+             <input placeholder="Username" [(ngModel)]="username" name="username" required>
+           </td>
+         </tr>
+         <tr>
+         <td>
+           <input placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
+       </td>
+       </tr></table>
+     </form>
+<button (click)="login()" color="primary">Login</button>
