able to upload image on learning topic

--- a/src/app/challenge/challenge-index/challenge-index.component.html
+++ b/src/app/challenge/challenge-index/challenge-index.component.html
@@ -27,7 +27,7 @@
     <td>{{c.question_difficulty_id}}</td>
     <td>{{c.challenge_xp}}</td>
     <td>{{c.challenge_star}}</td>
-    <td>{{c.challenge_image}}</td>
+    <td><img src="{{c.challenge_image}}" width="64" height="64"></td>
     <td>{{c.challenge_question}}</td>
     <td>{{c.questionDifficulty}}</td>
     <td>{{c.users?.id}}</td>
