--- a/src/app/learning-topic/learning-topic-show/learning-topic-show.component.html
+++ b/src/app/learning-topic/learning-topic-show/learning-topic-show.component.html
@@ -16,7 +16,7 @@
     <td>{{topic.question_difficulty_id}}</td>
     <td>{{topic.question_category_id}}</td>
     <td>{{topic.learning_topic_name}}</td>
-    <td>{{topic.learning_topic_image}}</td>
+    <td><img src="{{topic.learning_topic_image}}" width="64" height="64"></td>
      <td>
       <button class="btn btn-danger" (click)="delete(topic)"> Delete</button>
     </td>
