fixing upload image and string at learning topics

--- a/src/app/learning-topic/learning-topic-create/learning-topic-create.component.html
+++ b/src/app/learning-topic/learning-topic-create/learning-topic-create.component.html
@@ -28,6 +28,6 @@
 <!--     <button (click)="fileInput.click()">Select File</button> -->
 <!--     <button (click)="onUpload()">Upload!</button> -->
     </div>
-    <button (click)="onSubmit()" class="btn btn-success">Update</button>
+    <button (click)="onUpload()" class="btn btn-success">Update</button>
   </form>
 </div>
