--- a/src/app/learning-item/learning-item-create/learning-item-create.component.html
+++ b/src/app/learning-item/learning-item-create/learning-item-create.component.html
@@ -17,20 +17,9 @@
     </div>
     
     <div class="form-group">
-      <label for="learning_item_image">learning_item_image :</label>
-      <input type="learning_item_image" formControlName="learning_item_image" name="learning_item_image" class="form-control" id="learning_item_image">
+      <label >learning_item_image :</label>    
+      <input type="file" (change)="onFileChanged($event)">
     </div>
-    
-    <div class="form-group">
-      <label for="learning_item_sound">learning_item_sound :</label>
-      <input type="learning_item_sound" formControlName="learning_item_sound" name="learning_item_sound" class="form-control" id="learning_item_sound">
-    </div>
-    
-    <div class="form-group">
-      <label for="learning_item_answer">learning_item_answer :</label>
-      <input type="learning_item_answer" formControlName="learning_item_answer" name="learning_item_answer" class="form-control" id="learning_item_answer">
-    </div>
-
-    <button (click)="onSubmit()" class="btn btn-success">create</button>
+    <button (click)="onUpload()" class="btn btn-success">Update</button>
   </form>
 </div>
