adding several data challenge and answer

--- a/src/app/challenge/challenge-index/challenge-index.component.html
+++ b/src/app/challenge/challenge-index/challenge-index.component.html
@@ -30,7 +30,7 @@
     <td><img src="{{c.challenge_image}}" width="64" height="64"></td>
     <td>{{c.challenge_question}}</td>
     <td>{{c.challenge_type}}</td>
-    <td>{{c.questionDifficulty}}</td>
+    <td>{{c.questionDifficulty?.question_difficulty_name}}</td>
     <td>
       <button class="btn btn-danger" (click)="delete(c)"> Delete</button>
     </td>
